# rosneuro_tutorials

./: CMakeLists.txt  README.md  package.xml
config/: ChainCfgDemo.yaml  ChainCfgDemoAlpha.yaml  ChainCfgDemoBlink.yaml  ChainCfgDemoDC.yaml  ChainCfgDemoLap.yaml
launch/: acquisition_neuroviz.launch  acquisition_neuroviz_recorder.launch  alpha_waves_processing.launch  bandpower.launch  bar_plot.launch  blink_detector.launch  filter_chain.launch
scripts/: alpha_waves_processing.py  bandpower.py  bar_plot.py  blink_detector.py  listener.py  talker.py
src/: blink_detector.cpp
